[package]
name = "acid-rs"
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["Alexander Abraham <youreccentricity@outlook.com>"]
description= "A supersonic static-site generator written in Rust."
homepage = "https://github.com/iamtheblackunicorn/acid"
repository = "https://github.com/iamtheblackunicorn/acid"
documentation = "https://github.com/iamtheblackunicorn/acid"
readme = "README.markdown"
keywords = [
  "site",
  "static",
  "generator"
]
categories = [
  "command-line-utilities"
]
exclude = [  
  "site",
  "docs", 
  "assets", 
  "scripts",
  "/.github"
]

[dependencies]
git2 = "0.14.2"
regex = "1.5.5"
cleasy = "1.0.0"
liquid = "0.24.0"
kstring = "1.0.6"
colored = "2.0.0"
chrono = "0.4.19"
fs_extra = "1.2.0"
markdown = "0.3.0"
file-serve = "0.1.1"
angelmarkup = "1.0.0"
serde_json = "1.0.79"
extract-frontmatter = "2.1.0"
